# robo-garden

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: Urchin-deep-research-report.md  cloud_gpu_cost_estimate.md  nonspherical_rollers_exploration.md  rl_alternatives_cma_es_and_symmetry.md  tactile_proprioceptive_vision.md  urchin_ovoid_v1_design.md  urchin_spin_lite_v1_design.md  urchin_v3_bc_reg_design.md  urchin_v3_continued_curriculum.md  urchin_v3_control_rework_plan.md  urchin_v3_phase3_bc_controller.md  urchin_v3_phase4_design.md  urchin_v3_pipeline_audit_findings.md  urchin_v3_pipeline_inspection_handoff.md  urchin_v3_post_audit_test_plan.md  urchin_v3_reward_fix_plan.md  vlm_aesthetic_rewards.md
docs/design_review/: actuator_shortlist.md  collision_audit.md  consolidated_assessment.md  power_electronics.md  print_bom.md  review-the-urchin-robot-shimmering-rain.md  sensor_package.md  topology.md  velocity_clamp_procedure.md
docs/design_review_v1/: build_order.md  catalog_extension.md  consolidated_v1.md  sim_to_real_gaps.md  topology.md
docs/game_concepts/: biome_playable_content_breakdown.md  biome_progression_outline.md  creative_direction_brief.md  demo_slice_plan.md  level_structure_packet.md  minimum_viable_production_plan.md  movement_ability_ladder.md  resonance_vibration_mechanic_spec.md  story_beat_sheet.md  three_game_treatments.md
docs/game_concepts/art_direction/: biome_art_bible.md  concept_art_prompt_packet.md  image_generation_batch.md  image_generation_batch_runbook.md  moodboard_taxonomy.md  urchin_character_style_sheet.md  visual_direction_brief.md
docs/game_concepts/worldbuilding/: chapter_invocation_sheet.md  glyph_language_design.md  naming_canon.md  non_player_shape_presences_roster.md  puzzle_grammar_packet.md  shape_cosmology_brief.md  shape_philosophy_and_movement_meaning.md  symbol_to_biome_mapping.md  vehicles_and_devices_packet.md
isaac_server/: README.md  launch.ps1  mjcf_isaac_compat.py  server.py  view_robot.py
isaac_server/ext_studio/: __init__.py  extension.py
scripts/: _smoke_if_where.py  _wsl_smoke_if_where.sh  build_urchin_v3_blend.py  export_blender_trajectory.py  render_gate_smoke.sh  render_phase1_run2.sh  render_phase1_run2_resume.sh  render_phase1_smoke.sh  render_phase1_w9_1b_run1.sh  render_phase1_w9_1b_run2.sh  render_phase1_w9_smoke.sh  render_policy_video.py  render_scripted_oracle_review.sh  render_scripted_oracle_review_oracleoff.sh  render_scripted_oracle_review_partial.sh  render_scripted_oracle_review_w8.sh  render_w8_bc_6bearing.sh  run_e10_fewer_epochs.sh  run_e11_critic_reinit.sh  run_e12_lr_zero.sh  run_e12_override_repro.sh  run_e1_minimal_potential.sh  run_e2_dotproduct_velocity.sh  run_e3_sparse_shortestpath.sh  run_e4_scratch_minimal.sh  run_e5_bc_regularized.sh  run_e6_tiny_lr.sh  run_e7_frozen_logstd.sh  run_e8_scaler_unfrozen.sh  run_e9_value_loss_half.sh  run_g0_oracle_ceiling.sh  run_g1_warmstart_fresh_boot.sh  run_g2_scaler_drift_audit.sh  run_g4_sim_rebuild_chain.sh  run_urchin_v3_harden_chain.sh  run_urchin_v3_locomotion_atlas.sh  run_urchin_v3_phase1_chain.sh  run_urchin_v3_phase1_w9_chain.sh  run_urchin_v3_phase2_arena_chain.sh  run_urchin_v3_phase2b_chain.sh  (+9 more)
scripts/_w4_helpers/: collate_baseline.py  write_report.py
src/robo_garden/: __init__.py  app.py  cli.py  config.py  studio.py
src/robo_garden/building/: __init__.py  actuators.py  components.py  generator.py  materials.py  models.py  preview.py  validator.py
src/robo_garden/claude/: __init__.py  client.py  gating.py  prompts.py  session.py  tool_handlers.py  tools.py
src/robo_garden/core/: __init__.py  device.py  formats.py  interactive_sim.py  live_player.py  robot.py  simulation.py
src/robo_garden/data/actuators/: bldc_motors.yaml  dynamixel.yaml  hobby_servos.yaml  linear.yaml
src/robo_garden/data/materials/: 3d_printable.yaml  metals.yaml
src/robo_garden/environments/: __init__.py  domain_randomization.py  generator.py  gymnasium_wrapper.py  models.py  objects.py  terrain.py
src/robo_garden/input/: __init__.py  gamepad.py  mapping.py  runner.py
src/robo_garden/isaac/: __init__.py  bridge.py  protocol.py
src/robo_garden/modes/: __init__.py  base.py  compose.py  deploy.py  design.py  home.py  simulate.py  skills.py  train.py
src/robo_garden/rewards/: __init__.py  analysis.py  curriculum_design.py  eureka.py  models.py  reward_runner.py
src/robo_garden/skills/: __init__.py  inference.py  policy.py  promote.py  registry.py
src/robo_garden/training/: __init__.py  algorithms.py  brax_env.py  checkpoints.py  curriculum.py  engine.py  gym_env.py  history.py  isaac_engine.py  isaac_lab_dispatch.py  models.py  mujoco_engine.py  rollout.py  vectorized_env.py  visualization.py  wsl_dispatch.py
src/robo_garden/tui/: __init__.py  app.py
src/robo_garden/tui/screens/: __init__.py  building.py  chat.py  environments.py  home.py  rewards.py  stub.py  training.py
src/robo_garden/viewer/: __init__.py  session_viewer.py
tests/: conftest.py
tests/test_core/: test_actuators.py  test_diagnostics.py  test_formats.py  test_primitives.py  test_rolling_engine.py  test_simulation.py
tests/test_rewards/: test_eureka.py  test_reward_runner.py
tests/test_substrate/: test_actuator_response.py  test_friction_map.py  test_tipping_decomposition.py
tests/test_tools/: test_handlers.py
tests/test_training/: test_mujoco_engine.py  test_vectorized_env.py
workspace/prompts/: go2_walk_forward.txt  go2_walker.txt  go2_walker_phase2_train.txt  spherical_robot.txt
workspace/scratch/: audit_conditioning.py  audit_raw_dataset.py  w5_postprocess.py  w6_atlas_analysis.py  w6_atlas_lhs.py  w6_atlas_run.py  w7_smoke.py
