[project]
name = "robo-garden"
version = "0.1.0"
description = "Claude-powered robot creation studio with simulation, training, and real-world deployment"
readme = "README.md"
authors = [
    { name = "Aaron Schick", email = "aaron.c.schick1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.2.0",
    "mujoco-mjx>=3.2.0; sys_platform == 'linux'",
    "jax[cuda12]>=0.4.30; sys_platform == 'linux'",
    "jax>=0.4.30; sys_platform != 'linux'",
    "anthropic>=0.40.0",
    "brax>=0.12.0; sys_platform == 'linux'",
    "gymnasium>=1.0.0",
    "gymnasium-robotics>=1.3.0",
    "stable-baselines3>=2.4.0",
    "textual>=1.0.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "rich>=13.9.0",
    "numpy>=1.26.0",
    "robot-descriptions>=1.12.0",
    "websockets>=12.0",
    "imageio[ffmpeg]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]
cloud = [
    # isaacsim is installed separately on Linux cloud nodes — it cannot be
    # cross-platform locked by uv.  On an A100/H100 instance run:
    #   pip install isaacsim --extra-index-url https://pypi.nvidia.com/
]

[project.scripts]
robo-garden = "robo_garden.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires NVIDIA GPU with CUDA",
    "api: requires ANTHROPIC_API_KEY",
]
