[project]
name = "robo-garden"
version = "0.1.0"
description = "Claude-powered robot creation studio with simulation, training, and real-world deployment"
readme = "README.md"
authors = [
    { name = "Aaron Schick", email = "aaron.c.schick1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.2.0",
    "mujoco-mjx>=3.2.0; sys_platform == 'linux'",
    "jax[cuda12]>=0.4.30; sys_platform == 'linux'",
    "jax>=0.4.30; sys_platform != 'linux'",
    "anthropic>=0.40.0",
    "brax>=0.12.0; sys_platform == 'linux'",
    "gymnasium>=1.0.0",
    "gymnasium-robotics>=1.3.0",
    "torch>=2.3",
    "stable-baselines3>=2.4.0",
    "textual>=1.0.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "rich>=13.9.0",
    "numpy>=1.26.0",
    "robot-descriptions>=1.12.0",
    "websockets>=12.0",
    "imageio[ffmpeg]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]
cloud = [
    # isaacsim is installed separately on Linux cloud nodes — it cannot be
    # cross-platform locked by uv.  On an A100/H100 instance run:
    #   pip install isaacsim --extra-index-url https://pypi.nvidia.com/
]

[project.scripts]
robo-garden = "robo_garden.cli:main"

[build-system]
requires = ["uv_build>=0.10.9"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# PyTorch CUDA index (uv named-index + sources)
#
# On Windows, redirect torch to the CUDA 12.4 wheel index so SB3 uses the
# GPU for policy-network training.  On Linux, torch comes from PyPI and
# JAX/MJX/Brax handle GPU parallelism at the physics level.
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires NVIDIA GPU with CUDA",
    "api: requires ANTHROPIC_API_KEY",
]
